--- a/TimeSeriesFilter.TerminalOld/packages.config
+++ b/TimeSeriesFilter.TerminalOld/packages.config
@@ -9,7 +9,8 @@
   <package id="MathNet.Numerics" version="4.4.1" targetFramework="net461" />
   <package id="OxyPlot.Core" version="2.0.0-unstable1035" targetFramework="net461" />
   <package id="OxyPlot.Wpf" version="2.0.0-unstable1035" targetFramework="net461" />
-  <package id="PropertyTools.Wpf" version="3.0.0-unstable0141" targetFramework="net461" />
+  <package id="PropertyTools" version="3.1.0" targetFramework="net48" />
+  <package id="PropertyTools.Wpf" version="3.1.0" targetFramework="net48" />
   <package id="ReactiveUI" version="9.10.1" targetFramework="net462" />
   <package id="Splat" version="6.1.7" targetFramework="net462" />
   <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net462" />
@@ -19,5 +20,5 @@
   <package id="System.Reactive.Linq" version="4.0.0" targetFramework="net461" />
   <package id="System.Reactive.PlatformServices" version="4.0.0" targetFramework="net461" />
   <package id="System.Reactive.Windows.Threading" version="4.0.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" requireReinstallation="true" />
 </packages>
